--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -1,5 +1,15 @@
 
 ---
+- name: ICLR
+  year: 2018
+  id: iclr18
+  link: http://iclr.cc/
+  deadline: "2018-04-30 23:59:59"
+  timezone: Etc/GMT+12
+  date: April 30-3, 2018
+  place: Vancouver, CANADA 
+  sub: ML
+
 - name: NAACL
   year: 2018
   id: naacl18
@@ -69,6 +79,16 @@
   date: July 13-19, 2018
   place: Stockholm, Sweden
   sub: ML
+
+- name: ACL
+  year: 2018
+  id: acl18
+  link: https://acl2018.org/
+  deadline: "2018-07-15 23:59:59"
+  timezone: Etc/GMT+12
+  date: July 15-20, 2018
+  place: Melbourne, Australia
+  sub: NLP
 
 - name: UAI
   year: 2018
@@ -238,6 +258,16 @@
   timezone: Etc/GMT+10
   date: January 27 - February 1, 2019
   place: Hilton Hawaiian Village, Honolulu, Hawaii, USA
+  sub: ML
+
+- name: AISTATS
+  year: 2010
+  id: aistat19
+  link: https://www.aistats.org/
+  deadline: "2019-04-16 23:59:59"
+  timezone: Etc/GMT+12
+  date: April 16-18, 2019
+  place: Naha, Okinawa, Japan 
   sub: ML
 
 - name: ICASSP
